Fixed edges getting clipped when going between work slides

--- a/assets/css/3-sections/_work.sass
+++ b/assets/css/3-sections/_work.sass
@@ -27,7 +27,7 @@ $slide-width: 50%
     @include transition(left .5s ease-in-out)
 
     &.project-open
-      left: -100%
+      left: -101%
 
   .thumb-slide
     width: $slide-width
@@ -65,6 +65,7 @@ $slide-width: 50%
       @include grayscale(100%)
       opacity: .4
       margin: 15px 0
+      width: 98%
 
     &:hover, &:focus
 
